asconfigc: Fixed issue where paths with spaces could cause compiling to fail, and migrated tto the recommended ProcessBuilder instead of Runtime.exec()